[project]
name = "prompt-pipeline"
version = "0.1.0"
description = "Threading concurrent worker model to call Claude API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.25",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "streamlit>=1.40",
]
